# langserve-template

./: pyproject.toml
.devcontainer/: devcontainer.json  init.sh
app/: chain.py  chat.py  image_to_text.py  server.py
